zmenu_manager_cluster/05_adminer/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
