zmenu_manager_cluster/05_adminer/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adminer-route
  labels:
    app: adminer
spec:
  to:
    kind: Service
    name: adminer-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
